# traveler-problem

./: .gitignore  Cargo.toml  README.md  path_150.tsp  path_40.tsp
src/: config.rs  db.rs  lib.rs  main.rs
src/controllers/: city_controller.rs  mod.rs
src/entity/: city.rs  city_with_distance.rs  mod.rs
src/simulate_annealing/: graph.rs  initial_temperature.rs  mod.rs  path.rs  simulate_annealing.rs
src/utils/: generate_svg.rs  mod.rs  read_input.rs  recover_report.rs  write_report.rs
tests/: city_controller_tests.rs  city_tests.rs  city_with_distance_tests.rs  db_tests.rs  generate_svg_tests.rs  graph_path_tests.rs  read_input_tests.rs  write_report_tests.rs
