[package]
name = "traveler_problem"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = "1.12"
dotenvy = "0.15"
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.21.0"
