[package]
name = "traveler_problem"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
tempfile = "3.21.0"
rand = { version = "0.8", features = ["std"] }
chrono = "0.4.42"
